syntax = "proto3";

package WoodflowCi;

message Tree {
    string type = 1;
}

message Timber {
    string name = 1;
}

message Board {
    int32 seq = 1;
    Timber source = 2;
    string producer = 3;
}

message Furniture {
    string type = 1;
    string description = 2;
}
